<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizonal_margin"
    android:paddingRight="@dimen/activity_horizonal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simax.tictactoe.NavigationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_btn"
        android:gravity="center"
        android:text="@string/single_player"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/singEx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="@android:color/holo_blue_dark"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/_3x3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/sn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5x5"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/setX"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setO"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/singlePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button"
        android:text="@string/begin_game" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_btn"
        android:gravity="center"
        android:text="@string/multi_player"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/player1ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:hint="@string/pl1"
        android:inputType="text"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@color/colorPrimaryDark"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/player2ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:hint="@string/pl2"
        android:inputType="text"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@color/colorPrimaryDark"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/_3x3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/mp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5x5"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/bTwoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button"
        android:text="@string/begin_game2" />


</LinearLayout>
